Nuevos elementos y cambio al diseño

--- a/estilo.css
+++ b/estilo.css
@@ -1,162 +1,93 @@
-.principal{
-    background-color:#f59517e5 ;
+principal {
+    background-color: #f0f0f0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin: 0;
+    padding: 0;
 }
 
-.cabezera{
+.encabezado{
+    background-color: black;
+    border-radius: 8px;
+    margin: 2px;
+    padding: auto 8px;
     display: flex;
     flex-direction: row;
-    background-color: #000000fb;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-radius: 10px;
     justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(to right, #000000 50%, #d8b400 );
 }
 
-#nomUsuario{
-    padding-left: 5px;
-}
-
-#icoCabezera{
+.usuario{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
 }
 
-#listaCabezera{
+.usuario h5{
+    color: white;
+    font-size: 18px;
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
+.menu-navegacion{
     display: flex;
     flex-direction: row;
-    color: aliceblue;
+    gap: 20px;
+    list-style: none; /* Quita viñetas */
 }
 
-#lis{
-    margin: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 30px;
+.menu-navegacion a{
+    text-decoration: none;   /* Quita el subrayado */
+    font-size: 18px;         /* Aumenta el tamaño */
+    color: white;            /* Color opcional */
 }
 
-#lis:hover{
-    background: #c7a450;
-    transform: scale(1.05);
-    cursor: pointer;
+/* Aumenta el tamaño del cuadro */
+.lis{
+    padding: 10px 25px;  /* ⬅️ AQUÍ se agranda el cuadro */
 }
 
-.mainCuerpo{
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
+/* Para que el <a> ocupe todo el cuadro */
+.lis a{
+    display: block;
 }
 
-.imagen:hover {
-  filter: saturate(180%);
+.lis:hover{
+    border-radius: 5px;
+    background-color: #dfa30c;
 }
 
-.imagenIco{
-    width: 60px;
-}
-.imagenIco:hover {
-    transform: scale(1.05);
-}
-
-.datosPersonales{
-    background-color:#f0b465e5;
+.logo {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-radius: 10px;
+    margin-right: 5px;
+    margin-left: 10px;
+    animation-name: myAnimationLogo;
+    animation-duration: 12s;
+    animation-iteration-count: infinite;
 }
 
-#imgProfile{
-    background-color: black;
-    color: aliceblue;
-    padding: 60px;
-    border-radius: 20px;
-    border: 10px;
-    border-color: black;
-    margin: 15px;
+#logoPrincipal{
+    height: 55px;
+    width: 55px;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url('./img/Logo_JMLC1.webp');
 }
 
-#sobreMi{
-    padding: 80px;
-}
-
-.misProyectos{
-    display: flex;
-    flex-direction: row;
-    background-color: #f0b465e5;
-    margin-top: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-radius: 10px;
-    justify-content: space-around;
-}
-
-#icoProyecto{
-    display: flex;
-    flex-direction: row;
-    margin-right: 1000px;
-    background-color: black;
-    color: aliceblue;
-    justify-content: start;
-    align-items: center;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 10px;
-}
-
-.linkProyectos{
-    background-color: #000000;
-    margin-top: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-radius: 10px;
-    color: aliceblue;
-    margin: 10px;
-    padding: 30px;
-    justify-content: space-around;
-}
-#links{
-    padding-left: 20px;
-    margin-bottom: 10px;
-}
-
-.conteProyecto{
-    display: flex;
-    flex-direction: column;
-    margin-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.habilidadesBlandasSection{
-    display: flex;
-    flex-direction: column;
-    background-color: #f0b465e5;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-top: 20px;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.habilidadesBlandas{
-    display: flex;
-    flex-direction: row;
-    background-color: #f0b465e5;
-    margin-top: 20px;
-    border-radius: 10px;
-    padding: 30px;
-    justify-content: space-around;
-}
-
-#habilidad{
-    display: flex;
-    border-radius: 20px;
-    padding: 20px;
-    background-color: rgb(255, 85, 6);
-}
-
-#habilidad:hover{
-    background: #af9149;
-    transform: scale(1.05);
-    cursor: pointer;
+#logoPrincipal:hover{
+    height: 55px;
+    width: 55px;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url('./img/Logo_JMLC2.webp');
 }
