--- a/estilo.css
+++ b/estilo.css
@@ -64,6 +64,9 @@ body {
 .lis a{
     display: block;
 }
+.lis a:hover{
+	color: black;
+}
 
 .lis:hover{
     border-radius: 5px;
@@ -103,7 +106,7 @@ body {
 }
 
 
-/*Haciendo la pagina responsiva el headewr*/
+/*Haciendo la pagina responsiva el header*/
 
 @media screen and (max-width:900px) {
     header{
@@ -133,19 +136,27 @@ body {
 	initial-value: -3000px;
 }
 
-.galeria3D,
-.galeria3D > div {
-	position: absolute;
-	width: 100%;
-	height: 100svh;
-	background-color: #000;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	perspective: 1000px;
-	transform-style: preserve-3d;
-	overflow: hidden;
+.galeria3D {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    perspective: 1000px;
+    overflow: hidden; /* 🔥 CLAVE */
 }
+
+
+.galeria3D > div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+
+
 .title {
 	position: absolute;
 	top: 50%;
@@ -163,6 +174,14 @@ body {
 		0 0 4rem rgba(0, 0, 0, 0.1);
 	letter-spacing: 0.1em;
 	pointer-events: none;
+}
+
+.title{
+	text-shadow: 0 0 10px rgb(216, 148, 0);
+}
+
+.img3D{
+  	box-shadow: 0 0 20px rgba(72, 60, 253, 0.541);
 }
 
 .img3D {
@@ -215,4 +234,161 @@ body {
 	100% {
 		--translate-z: 2000px;
 	}
+}
+
+.contenido-principal{
+	color: #fff;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	
+}
+
+
+/*Sobre mi: JMLC*/
+.Sobre-mi{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 	50px;
+	padding: 95px 20px;
+	background-color: #080734;
+}
+
+.mensaje{
+	border: 10px solid #9c6801d0;             /* Activa el borde */
+    filter: drop-shadow(0 0 10px rgba(155, 122, 0, 0.836));
+}
+.element {
+  border: 20px solid transparent;             /* Activa el borde */
+  width: 750px;                               /* Más ancho para ver el efecto */
+  padding: 10px;                             /* Espacio interno */
+  box-sizing: border-box;
+  background-color: #000000;                     /* Fondo para destacar el texto */
+  color: #ffffff;                                /* Texto legible */
+}
+
+
+
+/*Sobre-mi: Sección imagenes*/
+.imagenes{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#man1{
+    position: absolute;
+    z-index: 1;
+    filter: drop-shadow(0 0 20px rgb(55, 244, 228));
+}
+#man2{
+    position: absolute;
+    z-index: 2;
+    filter: drop-shadow(0 0 10px rgb(250, 225, 83));
+}   
+
+#man3 {
+    position: relative;
+    z-index: 3;
+    border-radius: 50%;
+    object-fit: cover;
+    display: block;
+    object-position: center top; /* 👈 Esto la centra horizontal y la sube */
+    filter: drop-shadow(0 0 10px rgb(223, 211, 138));
+}
+
+#man2:hover,
+#man3:hover {
+    transform: rotate(360deg);
+    transition: transform 1.1s ease;
+
+
+}
+
+/*Responsiva esta sección de sobre-mi*/
+
+@media screen and (max-width:1000px) {
+    .Sobre-mi{
+        display: flex;
+        flex-direction: column;
+		align-items: center;
+        gap: 150px;
+        text-align: center;
+    }    
+
+	.element{
+		width: 550px;
+	}
+
+	#man1{
+		width: 300px;
+		height: 310px;
+	}
+
+	#man2{
+		width: 150px;
+		height: auto;
+	}
+
+	#man3{
+		width: 150px;
+		height: 150px;
+	}
+
+}
+
+@media screen and (max-width:800px) {
+	
+    .element{
+		width: 380px;
+	}
+}
+
+/*Habilidades tecnicas en programación*/
+.habilidades{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 10px;
+	background-color: #8d6000;
+	font-size: 30px;
+	color: white;
+}
+
+#imgTec{
+	height: 190px;
+	width: 180px;
+	border-radius: 10px;
+	margin: 10px;
+	padding: 5px;
+	background-color: wheat;
+	border: solid 2px blue;
+}
+
+#imgTec:hover{
+	transform: scale(1.1);
+	transition: transform 0.5s ease;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.541);
+}
+
+@media screen and (max-width:100px) {
+    #imgTec{
+		height: 140px;
+		width: 130px;
+	}  
+
+}
+
+@media screen and (max-width:700px) {
+    #imgTec{
+		height: 80px;
+		width: 80px;
+	}  
+
 }
